# rust-retrieval-engine

./: .env.example  .gitignore  README.md  docker-compose.yml
api/: Dockerfile  package-lock.json  package.json
api/src/: index.ts  openai.ts  types.ts
data/: docs.json  eval_cases.json
engine/: Cargo.toml  Dockerfile
engine/src/: bm25.rs  eval.rs  handlers.rs  index.rs  main.rs  vector.rs
scripts/: package-lock.json  package.json  seed.ts  tsconfig.json
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  index.css  types.ts
ui/src/components/: AnswerPanel.tsx  EvalTab.tsx  LatencyFooter.tsx  ScoreBar.tsx  SourceCard.tsx  StageIndicator.tsx
ui/src/hooks/: useEval.ts  useSearch.ts
